48
================

14/03/24 Include additional fields with service json/xml_lost/found_animals
14/03/24 clinic appointment types #1317
14/03/24 Microchip registry checks should accept 9+10 digit too
14/03/24 PetLink: Disable 15 digit validation rule when registering all
13/03/24 Ability to retire animal and person flags #1388
13/03/24 Add IncidentCode and auto generation/formats #52
12/03/24 Fix bug where request sign by email reloaded
11/03/24 Use English text for payment links instead of ref (Saggi) #1450
07/03/24 Fix back button bug when logging in from a link with credentials
07/03/24 Fix back button bug for first link after home page
07/03/24 Trim credentials when performing FTP logins
06/03/24 PetLink accept all should include 9/10 digit chips too
05/03/24 Remove rota records when removing people
05/03/24 Translate publisher names on publishing logs screen
04/03/24 Update name of FoundAnimals -> Found/24Pet in publishing history
04/03/24 Add html_events service call and docs #940
03/03/24 Fix csv import fault caused by use of named args
01/03/24 Add max filesize limit for document templates #1449
29/02/24 Include reclaim return counts on annual figures
29/02/24 Sort homecheck history by date desc
29/02/24 Entry type field not hiding correctly for non-shelter animals
29/02/24 Split addresses into line1/2/csv for chip registries that need it
29/02/24 Cat TNRs were being excluded from annual figures 
28/02/24 Check home phone for a similar cell in embedded add person
28/02/24 Handle exporting animal CSV PDF with no name
28/02/24 Remove confusing "merge duplicates" from csvimport
28/02/24 Add "Dead On Arrival" entry type and behaviour #1448
26/02/24 Ability to copy media to other records #1258
26/02/24 Allow doc repo files to be attached when emailing media #1434
25/02/24 Fix bug processing animal forms with no breed #1443
24/02/24 Escape animal names in option/value attribute of online forms